# django-mobile

./: .gitignore  README.rst  pyproject.toml
django_mobile/: __init__.py  conf.py  loader.py  middleware.py
