[tool.poetry]
name = "django-mobile"
version = "0.8.2"
description = "A fork of django mobile updated to work with django 4.0"
authors = ["Yaakov Lowenstein"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-admin = "^2.0.1"
psycopg2 = "^2.9.3"
django-postgres-extensions = "^0.9.3"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
